--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
   <title>Sahih.ae - Digitize Your Credentials</title>
   <link rel="icon" type="image/x-icon" href="/images/faviconcmprsd.png">
 
-  <!-- CDN -->
-  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+  <!-- CDN for swiper animation of testimonial section-->
+  <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
 
   <!-- global postcss configuration -->
   <link rel="stylesheet" href="/dist/main.css">
@@ -61,16 +62,15 @@
         <a href="#verify" class="hover:text-amber-500">Verify Certificate</a>
 
         <!-- Buttons -->
-        <button class="px-10 py-2 border border-amber-600 rounded-md hover:bg-gradient-to-r from-[#e5c200] to-[#b99503]  hover:text-black transition duration-300 ease-in-out">Login</button>
+        <button class="px-10 py-2 border border-amber-600 rounded-md hover:bg-gradient-to-r from-[#e5c200] to-[#b99503]  hover:text-black transition duration-100 ease-in-out">Login</button>
         <button class="px-10 py-2 bg-gradient-to-r from-[#e5c200] to-[#b99503] rounded-md hover:opacity-90">Register</button>
       </div>
     </div>
   </nav>
 
 
-<!-- section 1 -->
 <!-- Hero Section -->
-<section class="flex flex-col md:flex-row items-center  px-8 pt-3 py-12 font-medium relative">
+<section class="flex flex-col md:flex-row items-center px-8 pt-3 py-12 font-medium relative">
   <!-- Left Content -->
   <div class="flex-1 space-y-4 z-10">
     <h1 class="text-5xl md:text-7xl font-bold leading-tight ">
@@ -79,47 +79,51 @@
     </h1>
     <p class="text-2xl pb-4">Issue, Verify, and Validate with Confidence</p>
 
-<!-- Buttons -->
-<div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 pb-4 relative z-10">
-  <div class="relative w-full md:w-auto">
-    <img src="/images/pattern.jpg" alt="Pattern" class="absolute top-0 left-0 w-24 h-24 md:w-32 md:h-32 z-0 md:block hidden">
-    <button class="w-full md:w-auto px-6 py-3 bg-gradient-to-r from-[#e5c200] to-[#b49900] rounded-md hover:opacity-90 relative z-10 text-center">
-      Get Started
-    </button>
-  </div>
-  <button class="w-full md:w-auto px-6 py-3 border border-[#d7b42b] text-black rounded-md hover:bg-[#ab9025]  duration-150 text-center">
-    Verify Certificate
-  </button>
-</div>
+    <!-- Buttons -->
+    <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 pb-4 relative z-10">
+      <div class="relative w-full md:w-auto">
+        <img src="/images/pattern.jpg" alt="Pattern" class="absolute top-0 left-0 w-24 h-24 md:w-32 md:h-32 z-0 md:block hidden">
+        <button class="w-full md:w-auto px-6 py-3 bg-gradient-to-r from-[#e5c200] to-[#b49900] rounded-md md:hover:opacity-90 relative z-10 text-center">
+          Get Started
+        </button>
+      </div>
+      <button class="w-full md:w-auto px-6 py-3 border border-[#d7b42b] text-black rounded-md md:hover:bg-[#ab9025] md:duration-150 text-center">
+        Verify Certificate
+      </button>
+    </div>
 
     <p class="text-lg pb-6 relative z-20">
       Join hundreds of companies issuing secure, digital credentials with ease
     </p>
 
     <!-- Links -->
-    <div class="flex space-x-6 text-sm font-bold md:text-lg">
-      <a href="#issue-certificate" class="hover:underline text-transparent bg-clip-text bg-gradient-to-r from-[#e5c200] to-[#b99503] flex items-center ">
+    <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 text-sm font-bold md:text-lg justify-start items-center">
+      <a href="#issue-certificate" class="hover:underline text-transparent bg-clip-text bg-gradient-to-r from-[#e5c200] to-[#b99503] flex items-center w-full md:w-auto justify-center">
         Start Issuing Certificates
-        <svg class="ml-2 w-6 h-6" fill="none" stroke="#e5c200" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7"></path>
-        </svg>              
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-8 h-8 ml-2 button-with-animation">
+          <path fill="#f4c218" d="M256 0a256 256 0 1 0 0 512A256 256 0 1 0 256 0zM244.7 
+          395.3l-112-112c-4.6-4.6-5.9-11.5-3.5-17.4s8.3-9.9 14.8-9.9l64 0 0-96c0-17.7 
+          14.3-32 32-32l32 0c17.7 0 32 14.3 32 32l0 96 64 0c6.5 0 12.3 3.9 14.8 9.9s1.1 
+          12.9-3.5 17.4l-112 112c-6.2 6.2-16.4 6.2-22.6 0z"/>
+        </svg>
       </a>
       
-      <a href="#explore-features" class="hover:underline flex items-center">
+      <a href="#explore-features" class="hover:underline flex items-center w-full md:w-auto justify-center">
         Explore Features
-        <svg class="ml-2 w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
-        </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-6 h-6 ml-2">
+          <path d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 
+          0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4
+          393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/>
+        </svg>    
       </a>
     </div>
   </div>
 
   <!-- Hero Image -->
-  <div class="flex-1 mt-8 md:mt-0">
+  <div class="flex-1 mt-8 md:mt-0 md:ml-8">
     <img src="/images/hero1w.webp" alt="Hero Image" class="w-full max-w-lg mx-auto md:max-w-xl animate-shake">
   </div>
 </section>
-
 
 <!-- Section 2 -->
 <!-- How it works section -->
@@ -180,9 +184,12 @@
 <div class="flex flex-col items-center mt-8">
   <a href="#issue-certificate" class="text-lg font-bold hover:underline text-transparent bg-clip-text bg-gradient-to-r from-[#e5c200] to-[#b99503] flex items-center justify-center space-x-2">
       <span>Learn More about the process</span>
-      <svg class="w-6 h-6" fill="none" stroke="#e5c200" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7"></path>
-      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-6 h-6 ml-2">
+        <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+        <path fill="#ebb800" d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3
+         0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5
+         12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/>
+        </svg>
   </a>
 </div>
 
@@ -249,10 +256,12 @@
             class="inline-flex items-center  px-6 py-3 text-sm font-semibold rounded-lg shadow-lg transition-transform duration-300 hover:scale-105"
             style="background: linear-gradient(90deg, #EFBF04 0%, #896D02 100%);">
             Explore All Features
-            <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
-            </svg>
-        </a>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-5 h-5 ml-2">
+              <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 
+              45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8
+               0 45.3s32.8 12.5 45.3 0l160-160z"/></svg>
+              </a>
     </div>
 </section>
 
@@ -313,10 +322,12 @@
   <div class="flex space-x-6 text-lg font-bold justify-center">
       <a href="#issue-certificate" class="hover:underline text-transparent bg-clip-text bg-gradient-to-r from-[#a58e2e] to-[#edbf09] flex items-center">
           Find the Right Solution for You
-          <svg class="ml-2 w-6 h-6" fill="none" stroke="#e5c200" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7"></path>
-          </svg>
-      </a>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-6 h-6 ml-2">
+            <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+            <path fill="#ebb800" d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3
+             0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5
+             12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/></svg>
+              </a>
   </div>
 </section>
 
@@ -360,41 +371,50 @@
       </div>
     </div>
   
-    <!-- Testimonial -->
-    <div class="relative flex items-center justify-center overflow-hidden mb-24">
-      <div id="reviewSlider" class="flex flex-col md:flex-row transition-transform duration-500 ease-in-out">
-        <!-- Box 1 -->
-        <div class="testimonial w-full md:w-1/3 px-4 text-center mb-6 md:mb-0">
-          <div class="bg-white shadow-md rounded-lg p-6 relative">
-            <img src="/images/testimonial-profilepicture.png" alt="Author profile" class="w-16 h-16 rounded-full border-4 border-gray-200 mx-auto -mt-8">
-            <p class="italic text-gray-700 mt-4">"The verification process has never been so easy and seamless."</p>
-            <p class="mt-4 font-semibold">Sarah Johnson</p>
-            <p class="text-sm text-gray-500">HR Director, TechInnovate Solutions</p>
-          </div>
-        </div>
-  
-        <!-- Box 2 -->
-        <div class="testimonial w-full md:w-1/3 px-4 text-center mb-6 md:mb-0">
-          <div class="bg-white shadow-md rounded-lg p-6 relative">
-            <img src="/images/testimonial-profilepicture.png" alt="Author profile" class="w-16 h-16 rounded-full border-4 border-gray-200 mx-auto -mt-8">
-            <p class="italic text-gray-700 mt-4">"The verification process has never been so easy and seamless."</p>
-            <p class="mt-4 font-semibold">Sarah Johnson</p>
-            <p class="text-sm text-gray-500">HR Director, TechInnovate Solutions</p>
-          </div>
-        </div>
-  
-        <!-- Box 3 -->
-        <div class="testimonial w-full md:w-1/3 px-4 text-center mb-6 md:mb-0">
-          <div class="bg-white shadow-md rounded-lg p-6 relative">
-            <img src="/images/testimonial-profilepicture.png" alt="Author profile" class="w-16 h-16 rounded-full border-4 border-gray-200 mx-auto -mt-8">
-            <p class="italic text-gray-700 mt-4">"Amazing platform for managing and validating credentials!"</p>
-            <p class="mt-4 font-semibold">Emily Watson</p>
-            <p class="text-sm text-gray-500">HR Manager, GlobalTech Inc.</p>
-          </div>
-        </div>
+
+<!-- testimonial -->
+<!-- Testimonials Section -->
+<div class="max-w-7xl mx-auto px-4 py-12">
+  <div class="swiper mySwiper">
+    <div class="swiper-wrapper">
+      <!-- Slide 1 -->
+      <div class="swiper-slide bg-white rounded-lg shadow-lg border border-gray-200 p-8 max-w-md mx-auto">
+        <blockquote class="text-gray-700 italic mb-4">
+          “Cursus elementum magna ut duis pulvinar tincidunt vivamus adipiscing quam.”
+        </blockquote>
+        <img class="w-16 h-16 rounded-full mx-auto mb-4" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/eourInstructors3.svg" alt="Profile">
+        <p class="text-center font-bold">Sachu Sajith</p>
+        <p class="text-center text-sm text-gray-500">Front-end-dev</p>
+      </div>
+
+      <!-- Slide 2 -->
+      <div class="swiper-slide bg-white rounded-lg shadow-lg border border-gray-200 p-8 max-w-md mx-auto">
+        <blockquote class="text-gray-700 italic mb-4">
+          “Cursus elementum magna ut duis pulvinar tincidunt vivamus adipiscing quam.”
+        </blockquote>
+        <img class="w-16 h-16 rounded-full mx-auto mb-4" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/eourInstructors3.svg" alt="Profile">
+        <p class="text-center font-bold">Abhishek</p>
+        <p class="text-center text-sm text-gray-500">Team-lead</p>
+      </div>
+
+      <!-- Slide 3 -->
+      <div class="swiper-slide bg-white rounded-lg shadow-lg border border-gray-200 p-8 max-w-md mx-auto">
+        <blockquote class="text-gray-700 italic mb-4">
+          “Duis pulvinar tincidunt vivamus adipiscing quam. Eget dui quis etiam sed eget sed est.”
+        </blockquote>
+        <img class="w-16 h-16 rounded-full mx-auto mb-4" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/eourInstructors3.svg" alt="Profile">
+        <p class="text-center font-bold">Linto</p>
+        <p class="text-center text-sm text-gray-500">UI/UXDesigner</p>
       </div>
     </div>
-  
+
+    <!-- Pagination -->
+    <div class="swiper-pagination"></div>
+  </div>
+</div>
+
+
+
     <!-- Trusted by Leading Companies -->
     <h3 class="text-2xl md:text-3xl font-semibold">
       Trusted by Leading Companies <span class="text-[#e5c200]">Worldwide</span>
@@ -441,15 +461,17 @@
             class="inline-flex items-center px-6 py-3 text-sm font-semibold rounded-lg shadow-lg transition-transform duration-300 hover:scale-105"
             style="background: linear-gradient(90deg, #EFBF04 0%, #896D02 100%);">
             View Pricing Options
-            <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
-            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-5 h-5 ml-2">
+              <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 
+              45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8
+               0 45.3s32.8 12.5 45.3 0l160-160z"/></svg>
           </a>
         </div>
       </div>
 
       <!-- Second image on the right (plan-price) -->
-      <div class="w-48">
+      <div class="w-48 hidden md:block">
         <img src="/images/plan-price.webp" alt="price-section-image" class="w-full max-w-xs mx-auto" style="margin-left: 24px;">
       </div>
     </div>
@@ -476,9 +498,11 @@
             class="inline-flex items-center px-6 py-3 text-sm font-semibold rounded-lg shadow-lg transition-transform duration-300 hover:scale-105"
             style="background: linear-gradient(90deg, #EFBF04 0%, #896D02 100%);">
             Join as Partner
-           <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
-            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-5 h-5 ml-2">
+              <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 
+              45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8
+               0 45.3s32.8 12.5 45.3 0l160-160z"/></svg>
           </a>
         </div>
       </div>
